[FIX] mail: restores the chatter's ability to grow in FormView
The commit odoo/odoo@babf7634e0d431471e5b708b937407c8b731b77b broke a
previous fix in odoo/odoo@6228500a3f3cdb17286d50f2662f3e7b0226f667
allowing the chatter to grow beyond its original size.

This commit restores the `flex-grow: 1` on the chatter's container but
also limit its maximum width (like in saas-15.3) to avoid it becoming
unreadable.

--- a/addons/mail/static/src/widgets/form_renderer/form_renderer.scss
+++ b/addons/mail/static/src/widgets/form_renderer/form_renderer.scss
@@ -11,14 +11,15 @@
     }
 
     &.o-aside {
-        --Chatter-max-width: #{$o-chatter-min-width};
+        --Chatter-max-width: #{$o-form-view-sheet-max-width};
         --ChatterTopbar-padding-left: #{$o-horizontal-padding};
         --ChatterTopbar-padding-right: #{$o-horizontal-padding};
 
         flex-shrink: 0;
-        flex-grow: 0;
+        flex-grow: 1;
         border-left: $border-width solid;
         padding: map-get($spacers, 0);
+        max-width: var(--Chatter-max-width);
         min-width: $o-chatter-min-width;
         width: auto;
 
